--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 // https://mvnrepository.com/artifact/com.h2database/h2
 	testImplementation 'com.h2database:h2:2.1.214' // vulnerable, shouldn't matter for testing
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1' // todo remove
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1' // todo remove
 
 }
 
