--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.0.5'
 	id 'io.spring.dependency-management' version '1.1.0'
+	id 'jacoco'
 }
 
 group = 'com.example'
@@ -10,6 +11,19 @@ sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
+}
+
+test {
+	finalizedBy jacocoTestReport // report is always generated after tests run
+}
+
+build {
+	finalizedBy jacocoTestReport // report is always generated after build
+}
+
+jacocoTestReport {
+	dependsOn build
+	dependsOn test // tests are required to run before generating the report
 }
 
 dependencies {
