--- a/.github/workflows/deployment-pipeline.yml
+++ b/.github/workflows/deployment-pipeline.yml
@@ -17,7 +17,7 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
       - name: Modify Gradlew
-        run: chmod -x gradlew
+        run: chmod -x ./gradlew
       - name: Build jar
         run: ./gradlew build
       - name: Deploy to Fly.io
