--- a/.github/workflows/deployment-pipeline.yml
+++ b/.github/workflows/deployment-pipeline.yml
@@ -15,11 +15,10 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'temurin'
       - name: Modify Gradlew
-        run: chmod -x ./gradlew
+        run: chmod -x gradlew
       - name: Build jar
-        run: chmod -x ./gradlew && ./gradlew jar
+        run: ./gradlew jar
       - name: Deploy to Fly.io
         uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --remote-only
