--- a/.github/workflows/deployment-pipeline.yml
+++ b/.github/workflows/deployment-pipeline.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Modify Gradlew
         run: chmod -x gradlew
       - name: Build jar
-        run: ./gradlew jar
+        shell: /bin/bash
+        run: ./gradlew jar --gradle-version 7.6.1
       - name: Deploy to Fly.io
         uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --remote-only
